--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 ratatui = "0.24.0"
 crossterm = "0.27.0"
 anyhow = "1.0.75"
+id3 = "1.8.0"
+metaflac = "0.2"
+lewton = "0.10"
+symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav"] }
