--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ id3 = "1.8.0"
 metaflac = "0.2"
 lewton = "0.10"
 symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
