--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ lewton = "0.10"
 symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+[dev-dependencies]
+tempfile = "3.8.0"
