--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ symphonia = { version = "0.5", features = ["mp3", "flac", "ogg", "wav"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 directories = "5.0"
+log = "0.4"
 
 [dev-dependencies]
 tempfile = "3.8.0"
